foundations_contrib/src/foundations_contrib/resources/model_serving/kubernetes-deployment.envsubst.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app: foundations-model-package-${project_name}-${model_name}
  name: foundations-model-package-${project_name}-${model_name}-deployment
  namespace: ${namespace}
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: foundations-model-package-${project_name}-${model_name}
  template:
    metadata:
      labels: 
        app: foundations-model-package-${project_name}-${model_name}
    spec:
      serviceAccountName: "foundations-model-package-service-account"
      nodeSelector:
        jobRunner: "True"
      containers:
      - image: docker.shehanigans.net/foundations-model-package
        imagePullPolicy: IfNotPresent
        name: model
        volumeMounts:
        - mountPath: /archive
          name: archive
        - mountPath: /root/.foundations/config
          name: scheduler-config
      volumes: 
        - name: 'archive'
          persistentVolumeClaim: 
            claimName: 'archive-storage'
        - name: scheduler-config
          configMap:
            name: model-package-server-configuration
      imagePullSecrets:
      - name: dessa-registry-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: foundations-model-package-${project_name}-${model_name}-service
  namespace: ${namespace}
spec:
  selector:
    app: foundations-model-package-${project_name}-${model_name}
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
