foundations_contrib/src/foundations_contrib/resources/model_serving/ingress.envsubst.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foundations-model-package-${project_name}-${model_name}-ingress
  namespace: foundations-scheduler-test
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /projects/${project_name}/${model_name}/(.*)
        backend:
          serviceName: foundations-model-package-${project_name}-${model_name}-service
          servicePort: 80
